--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,9 @@
             /* border-bottom: none; */
             /* border-bottom: 20 px solid salmon; */
             border-radius: 10px;
-            margin: 10px;
+            margin: 20px;
+            text-align: justify;
+            padding: 10px;
         }
     </style>
 </head>
@@ -32,5 +34,13 @@
             <h3>My 4th Blog</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ab facilis nulla voluptatibus omnis velit dolores dicta consequatur doloremque vel, dolore in impedit officia veniam molestias ut. Pariatur, accusantium id.</p>
         </div>
+
+        <ol>
+            <p>Box model depends on some properties, these are given below</p>
+            <li>content</li>
+            <li>Margin</li>
+            <li>border</li>
+            <li>padding</li>
+        </ol>
 </body>
 </html>
