learned_box_shadow_display_none

--- a/external.html
+++ b/external.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>External CSS</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
     <div class="blogs">
         <h3>My first Blog</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ab facilis nulla voluptatibus omnis velit dolores dicta consequatur doloremque vel, dolore in impedit officia veniam molestias ut. Pariatur, accusantium id. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam in nesciunt consectetur dignissimos quidem cumque. Accusamus eligendi aliquam molestiae perspiciatis! Nisi modi eligendi dolores quibusdam amet nobis quisquam earum blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, numquam incidunt ad iste, facilis doloribus quas nisi voluptates obcaecati omnis unde soluta, quidem tempore debitis animi quia voluptatum quasi nobis!</p>
     </div>
-    <div class="blogs">
+    <div class="blogs second">
         <h3>My 2nd Blog</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ab facilis nulla voluptatibus omnis velit dolores dicta consequatur doloremque vel, dolore in impedit officia veniam molestias ut. Pariatur, accusantium id. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam in nesciunt consectetur dignissimos quidem cumque. Accusamus eligendi aliquam molestiae perspiciatis! Nisi modi eligendi dolores quibusdam amet nobis quisquam earum blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, numquam incidunt ad iste, facilis doloribus quas nisi voluptates obcaecati omnis unde soluta, quidem tempore debitis animi quia voluptatum quasi nobis!.</p>
     </div>
@@ -27,8 +28,9 @@
         <p>Box model depends on some properties, these are given below</p>
         <li>content</li>
         <li>Margin</li>
-        <li>border</li>
+        <li style="color:blueviolet; text-decoration: underline">border</li>
         <li>padding</li>
+        <li>width and height</li>
     </ol>
 </body>
 </html>
