hidden_inline_inline_block

--- a/external.html
+++ b/external.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+
+    <header class="header">
+        <h1>Welcome to my External Website</h1>
+    </header>
     <div class="blogs">
         <h3>My first Blog</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ab facilis nulla voluptatibus omnis velit dolores dicta consequatur doloremque vel, dolore in impedit officia veniam molestias ut. Pariatur, accusantium id. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam in nesciunt consectetur dignissimos quidem cumque. Accusamus eligendi aliquam molestiae perspiciatis! Nisi modi eligendi dolores quibusdam amet nobis quisquam earum blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, numquam incidunt ad iste, facilis doloribus quas nisi voluptates obcaecati omnis unde soluta, quidem tempore debitis animi quia voluptatum quasi nobis!</p>
     </div>
     <div class="blogs second">
         <h3>My 2nd Blog</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ab facilis nulla voluptatibus omnis velit dolores dicta consequatur doloremque vel, dolore in impedit officia veniam molestias ut. Pariatur, accusantium id. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam in nesciunt consectetur dignissimos quidem cumque. Accusamus eligendi aliquam molestiae perspiciatis! Nisi modi eligendi dolores quibusdam amet nobis quisquam earum blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, numquam incidunt ad iste, facilis doloribus quas nisi voluptates obcaecati omnis unde soluta, quidem tempore debitis animi quia voluptatum quasi nobis!.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ab facilis nulla voluptatibus omnis velit dolores dicta consequatur doloremque vel, dolore in impedit officia veniam molestias ut. Pariatur, accusantium id. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam in nesciunt consectetur dignissimos quidem cumque. Accusamus eligendi aliquam molestiae perspiciatis! Nisi modi eligendi dolores quibusdam amet nobis quisquam earum blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, numquam <span class="incident">incidunt ad iste</span> , facilis doloribus quas nisi voluptates obcaecati omnis unde soluta, quidem tempore debitis animi quia voluptatum quasi nobis!.</p>
     </div>
     <div class="blogs">
         <h3>My 3rd Blog</h3>
